Created the Logger class for better logging system. It print messages on files for history and terminal for real time debugging.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,8 @@ add_executable(ServerProgettoAndroid
         Database_Connection.h
         TCP_Server.cpp
         TCP_Server.h
+        Logger.cpp
+        Logger.h
 )
 
 # Linka MySQL Connector/C++ e OpenSSL
